updated colours and markup for examples

--- a/example.html
+++ b/example.html
@@ -8,11 +8,25 @@
 </head>
 <body>
 
-    <main>
+    <header>
+
+        <nav>
+            <ul>
+                <li><a href="#">Website</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </nav>
 
         <h1>Lorem ipsum</h1>
 
-        <p>Dolor sit amet, consectetur adipiscing elit. Donec augue libero, malesuada id odio malesuada, tincidunt tempor nibh. Sed at ante mollis, efficitur dui quis, accumsan mauris. Etiam finibus metus nec lacus scelerisque, vitae dictum mauris cursus. Praesent sodales, urna ut tempor fermentum, massa sem tincidunt ante, a tincidunt tortor quam sit amet purus. Morbi mollis sollicitudin arcu, a varius orci facilisis sit amet. In posuere magna eget nisi suscipit, ut pellentesque mauris vulputate. Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
+        <p>Dolor sit amet, consectetur adipiscing elit. Donec augue libero, malesuada id odio malesuada, tincidunt tempor nibh. Sed at ante mollis, efficitur dui quis, accumsan mauris. Etiam finibus metus nec lacus scelerisque, vitae dictum mauris cursus. Praesent sodales, urna ut tempor fermentum, massa sem tincidunt ante, a tincidunt tortor quam sit amet purus. Morbi mollis sollicitudin arcu, a varius orci facilisis sit amet.</p>
+
+    </header>
+
+    <main>
+
+        <p>In posuere magna eget nisi suscipit, ut pellentesque mauris vulputate. Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
 
         <h2>Nunc tincidunt, enim eget blandit convallis</h2>
 
@@ -26,6 +40,13 @@
 
         <p>Aliquam tempus sodales dignissim. Aliquam ut enim id libero porta volutpat sit amet vel turpis. Aliquam erat volutpat. Duis urna augue, feugiat in leo at, gravida elementum ipsum. Pellentesque vel fringilla neque, non luctus enim. Pellentesque varius dui vitae enim blandit, sed lacinia arcu suscipit. Nam iaculis eros ex, at placerat massa gravida vitae. Mauris luctus massa sit amet urna posuere, sit amet euismod sapien semper. Ut vestibulum, enim at pellentesque dapibus, diam nisi ultrices odio, tempus blandit nisl augue ut ex. Morbi gravida lobortis felis, eu faucibus mi condimentum suscipit. Aliquam orci eros, interdum in laoreet ac, euismod molestie eros.</p>
 
+        <ul>
+            <li>Ut vestibulum, enim at pellentesque dapibus</li>
+            <li>Diam nisi ultrices odio, tempus blandit nisl augue ut ex</li>
+            <li>Morbi gravida lobortis felis, eu faucibus mi condimentum</li>
+            <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
+        </ul>
+
         <h3>Etiam commodo ex ipsum</h3>
 
         <p>tempus maximus nibh hendrerit egestas. Sed non ultrices erat, ut lacinia lacus. In sed velit tortor. Morbi et convallis magna. Nam dui justo, sollicitudin non fringilla in, tempus in neque. Curabitur ut luctus lorem. Suspendisse potenti. Donec blandit felis ut turpis ultrices consectetur. Cras dignissim id mauris vel congue. Cras vestibulum est sit amet ligula convallis, ut imperdiet tortor interdum. Donec turpis lorem, lacinia eu ultricies eget, faucibus sed mauris. Mauris ac semper odio, interdum congue lacus.</p>
@@ -33,6 +54,12 @@
         <h4>Nulla ornare porta sodales</h4>
 
         <p>Duis vehicula eros odio, in pretium leo vulputate non. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam erat felis, faucibus in ligula ut, bibendum dictum nunc. Pellentesque tincidunt a leo a viverra. Aliquam vitae gravida felis. Donec auctor tellus mi, sed dignissim turpis rhoncus a. Cras luctus efficitur urna non egestas. Phasellus vulputate cursus ultrices. Ut sagittis dolor libero, vitae molestie eros varius ut. Mauris blandit ultricies odio, efficitur suscipit metus ornare id. Sed tincidunt odio a pretium porttitor.</p>
+
+        <ol reversed>
+            <li>Ut vestibulum, enim at pellentesque dapibus</li>
+            <li>Morbi gravida lobortis felis, eu faucibus mi condimentum</li>
+            <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
+        </ol>
 
         <h5>Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac.</h5>
 
@@ -43,6 +70,12 @@
         <p>Nunc condimentum, nisi sed vehicula faucibus, libero sem placerat felis, et molestie mi leo nec quam. Sed tellus felis, lobortis a rhoncus vitae, mollis ut dui. Sed ac turpis tellus. Cras a nulla varius, tincidunt risus vitae, euismod felis. Morbi malesuada placerat urna vitae scelerisque. Ut volutpat cursus interdum. Curabitur dictum elit vitae nunc ultrices, eu dictum massa hendrerit. Nam lacinia purus nec consequat volutpat. Curabitur bibendum ligula nunc, sit amet interdum sapien iaculis nec. Nam pharetra, felis ac vestibulum placerat, felis ante bibendum est, sollicitudin elementum tortor diam quis nisl. Praesent nulla nibh, condimentum vitae congue et, elementum nec erat.</p>
 
     </main>
+
+    <footer>
+
+        <p>&copy; Nam lacinia purus nec consequat volutpat.</p>
+
+    </footer>
 
 </body>
 </html>
