--- a/example.html
+++ b/example.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
     <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css" />
 </head>
 <body>
 
@@ -20,7 +21,7 @@
 
         <h1>Lorem ipsum</h1>
 
-        <p>Dolor sit amet, consectetur adipiscing elit. Donec augue libero, malesuada id odio malesuada, tincidunt tempor nibh. Sed at ante mollis, efficitur dui quis, accumsan mauris. Etiam finibus metus nec lacus scelerisque, vitae dictum mauris cursus. Praesent sodales, urna ut tempor fermentum, massa sem tincidunt ante, a tincidunt tortor quam sit amet purus. Morbi mollis sollicitudin arcu, a varius orci facilisis sit amet.</p>
+        <p>Dolor sit amet, consectetur adipiscing elit.</p>
 
     </header>
 
