Updated example and moving from SASS to CSS variables

--- a/example.html
+++ b/example.html
@@ -27,11 +27,15 @@
 
     <main>
 
-        <p>In posuere magna eget nisi suscipit, ut pellentesque mauris vulputate. Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
+        <h2>In posuere magna eget nisi suscipit</h2>
+
+        <p>Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
 
         <h2>Nunc tincidunt, enim eget blandit convallis</h2>
 
-        <p>Odio quam elementum arcu, quis auctor elit felis at elit. Nulla sed velit malesuada, tempus nibh et, euismod nibh. Etiam sit amet enim eget dui posuere pellentesque. Suspendisse bibendum interdum tortor quis accumsan. Vestibulum tempus posuere neque sit amet mollis. Proin at orci efficitur, laoreet diam non, viverra lorem. Donec eget neque eu dolor sollicitudin egestas. Aliquam dignissim, tellus tincidunt ultricies vehicula, ex justo laoreet metus, pellentesque interdum leo magna non tellus. Quisque et nulla erat. In ullamcorper risus tincidunt mi semper, quis pretium massa porta. Maecenas placerat pulvinar iaculis. Maecenas commodo velit quam, eu viverra leo fringilla at. Quisque nec ex quis dui consectetur venenatis lacinia at dolor.</p>
+        <p>Odio quam elementum arcu, quis auctor elit felis at elit. Nulla sed velit malesuada, tempus nibh et, euismod nibh. Etiam sit amet enim eget dui posuere pellentesque. Suspendisse bibendum interdum tortor quis accumsan. Vestibulum tempus posuere neque sit amet mollis. Proin at orci efficitur, laoreet diam non, viverra lorem. Donec eget neque eu dolor sollicitudin egestas. Aliquam dignissim, tellus tincidunt ultricies vehicula, ex justo laoreet metus, pellentesque interdum leo magna non tellus. Quisque et nulla erat.</p>
+
+        <p>In ullamcorper risus tincidunt mi semper, quis pretium massa porta. Maecenas placerat pulvinar iaculis. Maecenas commodo velit quam, eu viverra leo fringilla at. Quisque nec ex quis dui consectetur venenatis lacinia at dolor.</p>
 
         <h3>Sed bibendum dignissim elit 😀</h3>
 
