moving example.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?v=2023.1" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?v=2023.1" />
 </head>
 <body>
 
