More colours, enhanced typography
Taking advantage of different font weights
Resized headings
added arrows to sub headings
hover to expose links to a section
improved line height for body text and less line height for headings
moving to clamp for sizing padding/spacing
coloured headings
paragraphs/lists following other paragraphs have reduced spacing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?v=2023.1" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?v=2023.1" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?v=2023.2" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?v=2023.2" />
 </head>
 <body>
 
@@ -13,9 +13,9 @@
 
         <nav>
             <ul>
-                <li><a href="#">Website</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="#1">Website</a></li>
+                <li><a href="#2">About</a></li>
+                <li><a href="#3">FAQs</a></li>
             </ul>
         </nav>
 
@@ -27,23 +27,23 @@
 
     <main>
 
-        <h2>In posuere magna eget nisi suscipit</h2>
+        <h2 id="heading-1">In posuere magna eget nisi suscipit <a href="#heading-12" title="Link to this heading">🔗</a></h2>
 
         <p>Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
 
-        <h2>Nunc tincidunt, enim eget blandit convallis</h2>
+        <h2 id="heading-2">Nunc tincidunt, enim eget blandit convallis <a href="#heading-2" title="Link to this heading">🔗</a></h2>
 
         <p>Odio quam elementum arcu, quis auctor elit felis at elit. Nulla sed velit malesuada, tempus nibh et, euismod nibh. Etiam sit amet enim eget dui posuere pellentesque. Suspendisse bibendum interdum tortor quis accumsan. Vestibulum tempus posuere neque sit amet mollis. Proin at orci efficitur, laoreet diam non, viverra lorem. Donec eget neque eu dolor sollicitudin egestas. Aliquam dignissim, tellus tincidunt ultricies vehicula, ex justo laoreet metus, pellentesque interdum leo magna non tellus. Quisque et nulla erat.</p>
 
-        <p>In ullamcorper risus tincidunt mi semper, quis pretium massa porta. Maecenas placerat pulvinar iaculis. Maecenas commodo velit quam, eu viverra leo fringilla at. Quisque nec ex quis dui consectetur venenatis lacinia at dolor.</p>
+        <p>In ullamcorper risus <a href="#4">tincidunt</a> mi semper, quis pretium massa porta. Maecenas placerat pulvinar iaculis. Maecenas commodo velit quam, eu viverra leo fringilla at. Quisque nec ex quis dui consectetur venenatis lacinia at dolor.</p>
 
-        <h3>Sed bibendum dignissim elit 😀</h3>
+        <h3 id="heading-3">Sed bibendum dignissim elit 😀 <a href="#heading-3" title="Link to this heading">🔗</a></h3>
 
         <p>Ut rhoncus nulla sagittis quis. Morbi eget mi vitae eros placerat molestie. Aliquam ac ex at eros pharetra auctor in et justo. Praesent porta vitae magna vitae mollis. Suspendisse potenti. Sed feugiat eget lectus vel laoreet. Ut nec pulvinar massa. Sed lacus ante, eleifend sit amet urna sed, ultrices posuere libero.</p>
 
-        <h2>Maecenas lobortis leo quis libero mollis placerat</h2>
+        <h2 id="heading-4">Maecenas lobortis leo quis libero mollis placerat <a href="#heading-8" title="Link to this heading">🔗</a></h2>
 
-        <p>Aliquam tempus sodales dignissim. Aliquam ut enim id libero porta volutpat sit amet vel turpis. Aliquam erat volutpat. Duis urna augue, feugiat in leo at, gravida elementum ipsum. Pellentesque vel fringilla neque, non luctus enim. Pellentesque varius dui vitae enim blandit, sed lacinia arcu suscipit. Nam iaculis eros ex, at placerat massa gravida vitae. Mauris luctus massa sit amet urna posuere, sit amet euismod sapien semper. Ut vestibulum, enim at pellentesque dapibus, diam nisi ultrices odio, tempus blandit nisl augue ut ex. Morbi gravida lobortis felis, eu faucibus mi condimentum suscipit. Aliquam orci eros, interdum in laoreet ac, euismod molestie eros.</p>
+        <p>Aliquam tempus sodales dignissim. Aliquam ut enim id libero porta volutpat sit amet vel turpis. Aliquam erat volutpat. Duis urna augue, feugiat in leo at, gravida elementum ipsum. Pellentesque vel fringilla neque, non luctus enim. Pellentesque varius dui vitae enim blandit, sed lacinia arcu suscipit. Nam iaculis eros ex, at placerat massa gravida vitae. Mauris luctus massa sit amet urna posuere, sit amet euismod sapien semper. Ut vestibulum, enim at pellentesque dapibus, diam nisi ultrices odio, tempus blandit nisl augue ut ex. Morbi gravida <a href="#5">lobortis</a> felis, eu faucibus mi condimentum suscipit. Aliquam orci eros, interdum in laoreet ac, euismod molestie eros.</p>
 
         <ul>
             <li>Ut vestibulum, enim at pellentesque dapibus</li>
@@ -52,11 +52,11 @@
             <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
         </ul>
 
-        <h3>Etiam commodo ex ipsum</h3>
+        <h3 id="heading-5">Etiam commodo ex ipsum <a href="#heading-5" title="Link to this heading">🔗</a></h3>
 
         <p>tempus maximus nibh hendrerit egestas. Sed non ultrices erat, ut lacinia lacus. In sed velit tortor. Morbi et convallis magna. Nam dui justo, sollicitudin non fringilla in, tempus in neque. Curabitur ut luctus lorem. Suspendisse potenti. Donec blandit felis ut turpis ultrices consectetur. Cras dignissim id mauris vel congue. Cras vestibulum est sit amet ligula convallis, ut imperdiet tortor interdum. Donec turpis lorem, lacinia eu ultricies eget, faucibus sed mauris. Mauris ac semper odio, interdum congue lacus.</p>
 
-        <h4>Nulla ornare porta sodales</h4>
+        <h4 id="heading-6">Nulla ornare porta sodales <a href="#heading-6" title="Link to this heading">🔗</a></h4>
 
         <p>Duis vehicula eros odio, in pretium leo vulputate non. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam erat felis, faucibus in ligula ut, bibendum dictum nunc. Pellentesque tincidunt a leo a viverra. Aliquam vitae gravida felis. Donec auctor tellus mi, sed dignissim turpis rhoncus a. Cras luctus efficitur urna non egestas. Phasellus vulputate cursus ultrices. Ut sagittis dolor libero, vitae molestie eros varius ut. Mauris blandit ultricies odio, efficitur suscipit metus ornare id. Sed tincidunt odio a pretium porttitor.</p>
 
@@ -66,11 +66,11 @@
             <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
         </ol>
 
-        <h5>Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac.</h5>
+        <h5 id="heading-7">Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac <a href="#heading-7" title="Link to this heading">🔗</a></h5>
 
         <p>Fusce in euismod enim. Etiam rhoncus sollicitudin interdum. Pellentesque dapibus ipsum sed aliquam imperdiet. Suspendisse potenti. Maecenas pellentesque ex ut dui pharetra, nec ultrices est porta. Mauris accumsan maximus mi, sed bibendum nunc consectetur sed. In in viverra erat, at porta lorem. In hac habitasse platea dictumst. Nullam non lectus aliquam, pulvinar velit sed, condimentum velit. Nam eu mauris vel libero fermentum ornare eget at ex. Etiam egestas maximus turpis, egestas commodo purus finibus vitae. Donec finibus dignissim lacus, et facilisis urna tincidunt eget. Donec laoreet eros mi, euismod volutpat enim efficitur eu. Aenean aliquet mauris nulla, at facilisis est dictum et. Praesent lobortis ligula sed pulvinar hendrerit.</p>
 
-        <h6>Pellentesque gravida vulputate ipsum vel pharetra</h6>
+        <h6 id="heading-8">Pellentesque gravida vulputate ipsum vel pharetra <a href="#heading-8" title="Link to this heading">🔗</a></h6>
 
         <p>Nunc condimentum, nisi sed vehicula faucibus, libero sem placerat felis, et molestie mi leo nec quam. Sed tellus felis, lobortis a rhoncus vitae, mollis ut dui. Sed ac turpis tellus. Cras a nulla varius, tincidunt risus vitae, euismod felis. Morbi malesuada placerat urna vitae scelerisque. Ut volutpat cursus interdum. Curabitur dictum elit vitae nunc ultrices, eu dictum massa hendrerit. Nam lacinia purus nec consequat volutpat. Curabitur bibendum ligula nunc, sit amet interdum sapien iaculis nec. Nam pharetra, felis ac vestibulum placerat, felis ante bibendum est, sollicitudin elementum tortor diam quis nisl. Praesent nulla nibh, condimentum vitae congue et, elementum nec erat.</p>
 
