updated readme and css cache busting

--- a/README.html
+++ b/README.html
@@ -24,6 +24,8 @@
 <li>Media query for dark mode</li>
 </ul>
 
+<p>Preview at <a href="https://cchana.github.io/SkeletonCSS/">cchana.github.io/SkeletonCSS</a></p>
+
 </body>
 </html>
 
