updated heading max-width
reduced duplicated heading text which was just for testing

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
         </ol>
 
-        <h5 id="heading-7">Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac <a href="#heading-7" title="Link to this heading">🔗</a></h5>
+        <h5 id="heading-7">Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac <a href="#heading-7" title="Link to this heading">🔗</a></h5>
 
         <p>Fusce in euismod enim. Etiam rhoncus sollicitudin interdum. Pellentesque dapibus ipsum sed aliquam imperdiet. Suspendisse potenti. Maecenas pellentesque ex ut dui pharetra, nec ultrices est porta. Mauris accumsan maximus mi, sed bibendum nunc consectetur sed. In in viverra erat, at porta lorem. In hac habitasse platea dictumst. Nullam non lectus aliquam, pulvinar velit sed, condimentum velit. Nam eu mauris vel libero fermentum ornare eget at ex. Etiam egestas maximus turpis, egestas commodo purus finibus vitae. Donec finibus dignissim lacus, et facilisis urna tincidunt eget. Donec laoreet eros mi, euismod volutpat enim efficitur eu. Aenean aliquet mauris nulla, at facilisis est dictum et. Praesent lobortis ligula sed pulvinar hendrerit.</p>
 
