cache busting test

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?v=2023.3" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?v=2023.3" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?time={{ site.time | date: '%s%N' }}" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?time={{ site.time | date: '%s%N' }}" />
 </head>
 <body>
 
