cachebusting via codekit settings

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?time={{ site.time | date: '%s%N' }}" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?time={{ site.time | date: '%s%N' }}" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=D266E09514D2E1AC2A026196302EEB87" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=8F60EC58B60C6E7CC228856A1A310E65" />
 </head>
 <body>
 
