--- a/index.html
+++ b/index.html
@@ -4,81 +4,81 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=D266E09514D2E1AC2A026196302EEB87" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=895186C2CE59BF66A3A4A7D10D0A75E9" />
     <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=8F60EC58B60C6E7CC228856A1A310E65" />
 </head>
 <body>
 
-    <header>
+    <header id="top">
 
         <nav>
             <ul>
-                <li><a href="#1">Website</a></li>
-                <li><a href="#2">About</a></li>
-                <li><a href="#3">FAQs</a></li>
+                <li><a href="#top">SkeletonCSS</a></li>
+                <li><a href="https://github.com/cchana/skeletoncss" target="_blank">View on GitHub</a></li>
             </ul>
         </nav>
 
-        <h1>Lorem ipsum</h1>
+        <h1>SkeletonCSS</h1>
 
-        <p>Dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Not a CSS reset, just a set of basic styles to get you going.</p>
 
     </header>
 
     <main>
 
-        <h2 id="heading-1">In posuere magna eget nisi suscipit <a href="#heading-12" title="Link to this heading">🔗</a></h2>
+        <h2 id="intro">This is an example page built with SkeletonCSS <a href="#intro" title="Link to this heading">🔗</a></h2>
 
-        <p>Aliquam ornare volutpat placerat. Sed at volutpat turpis. Morbi pharetra, diam eget suscipit scelerisque, nunc odio varius augue, sed dapibus justo erat nec nulla. Suspendisse potenti. Curabitur tincidunt imperdiet efficitur. Morbi imperdiet porttitor vestibulum. In congue velit non nisi dapibus commodo. Phasellus dapibus leo sed nibh lobortis hendrerit. Vivamus mauris arcu, ornare id eros vitae, vestibulum accumsan magna. Donec lacinia lorem sed diam egestas, in tempus sem imperdiet.</p>
+        <p>Throughout my career, I've largely avoided reset files and worked with the quirks of CSS and rendering engines in mind. SkeletonCSS is a different take on a CSS library where you just get a base to work from.</p>
 
-        <h2 id="heading-2">Nunc tincidunt, enim eget blandit convallis <a href="#heading-2" title="Link to this heading">🔗</a></h2>
-
-        <p>Odio quam elementum arcu, quis auctor elit felis at elit. Nulla sed velit malesuada, tempus nibh et, euismod nibh. Etiam sit amet enim eget dui posuere pellentesque. Suspendisse bibendum interdum tortor quis accumsan. Vestibulum tempus posuere neque sit amet mollis. Proin at orci efficitur, laoreet diam non, viverra lorem. Donec eget neque eu dolor sollicitudin egestas. Aliquam dignissim, tellus tincidunt ultricies vehicula, ex justo laoreet metus, pellentesque interdum leo magna non tellus. Quisque et nulla erat.</p>
-
-        <p>In ullamcorper risus <a href="#4">tincidunt</a> mi semper, quis pretium massa porta. Maecenas placerat pulvinar iaculis. Maecenas commodo velit quam, eu viverra leo fringilla at. Quisque nec ex quis dui consectetur venenatis lacinia at dolor.</p>
-
-        <h3 id="heading-3">Sed bibendum dignissim elit 😀 <a href="#heading-3" title="Link to this heading">🔗</a></h3>
-
-        <p>Ut rhoncus nulla sagittis quis. Morbi eget mi vitae eros placerat molestie. Aliquam ac ex at eros pharetra auctor in et justo. Praesent porta vitae magna vitae mollis. Suspendisse potenti. Sed feugiat eget lectus vel laoreet. Ut nec pulvinar massa. Sed lacus ante, eleifend sit amet urna sed, ultrices posuere libero.</p>
-
-        <h2 id="heading-4">Maecenas lobortis leo quis libero mollis placerat <a href="#heading-8" title="Link to this heading">🔗</a></h2>
-
-        <p>Aliquam tempus sodales dignissim. Aliquam ut enim id libero porta volutpat sit amet vel turpis. Aliquam erat volutpat. Duis urna augue, feugiat in leo at, gravida elementum ipsum. Pellentesque vel fringilla neque, non luctus enim. Pellentesque varius dui vitae enim blandit, sed lacinia arcu suscipit. Nam iaculis eros ex, at placerat massa gravida vitae. Mauris luctus massa sit amet urna posuere, sit amet euismod sapien semper. Ut vestibulum, enim at pellentesque dapibus, diam nisi ultrices odio, tempus blandit nisl augue ut ex. Morbi gravida <a href="#5">lobortis</a> felis, eu faucibus mi condimentum suscipit. Aliquam orci eros, interdum in laoreet ac, euismod molestie eros.</p>
+        <p>Built with <a href="https://sass-lang.com/">SASS</a>, the project ships with some basic mixins and themeing functionality:</p>
 
         <ul>
-            <li>Ut vestibulum, enim at pellentesque dapibus</li>
-            <li>Diam nisi ultrices odio, tempus blandit nisl augue ut ex</li>
-            <li>Morbi gravida lobortis felis, eu faucibus mi condimentum</li>
-            <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
+            <li>Media queries</li>
+            <li>Responsive layouts</li>
+            <li>Colour palettes</li>
+            <li>Fibonacci based sizing</li>
+            <li><a href="#typography">Basic typography</a></li>
         </ul>
 
-        <h3 id="heading-5">Etiam commodo ex ipsum <a href="#heading-5" title="Link to this heading">🔗</a></h3>
+        <h3 id="typography">Typography <a href="#typography" title="Link to this heading">🔗</a></h2>
 
-        <p>tempus maximus nibh hendrerit egestas. Sed non ultrices erat, ut lacinia lacus. In sed velit tortor. Morbi et convallis magna. Nam dui justo, sollicitudin non fringilla in, tempus in neque. Curabitur ut luctus lorem. Suspendisse potenti. Donec blandit felis ut turpis ultrices consectetur. Cras dignissim id mauris vel congue. Cras vestibulum est sit amet ligula convallis, ut imperdiet tortor interdum. Donec turpis lorem, lacinia eu ultricies eget, faucibus sed mauris. Mauris ac semper odio, interdum congue lacus.</p>
+        <p>One of the reasons for SkeletonCSS to exist was to provide a layer of typography that could just be plugged into any site. Over time it's evolved and become a little more harmonious.</p>
 
-        <h4 id="heading-6">Nulla ornare porta sodales <a href="#heading-6" title="Link to this heading">🔗</a></h4>
+        <p>There are basic styles for a hero section with navigation, the footer, headings, paragraphs, lists and code blocks. The basics are covered with CSS variables available that you can adapt. More recently, the approach is more in line with the examples from this video on <a href="https://www.twitch.tv/videos/1778374666" rel="nofollow">great typography</a>.</p>
 
-        <p>Duis vehicula eros odio, in pretium leo vulputate non. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam erat felis, faucibus in ligula ut, bibendum dictum nunc. Pellentesque tincidunt a leo a viverra. Aliquam vitae gravida felis. Donec auctor tellus mi, sed dignissim turpis rhoncus a. Cras luctus efficitur urna non egestas. Phasellus vulputate cursus ultrices. Ut sagittis dolor libero, vitae molestie eros varius ut. Mauris blandit ultricies odio, efficitur suscipit metus ornare id. Sed tincidunt odio a pretium porttitor.</p>
+        <!-- https://www.twitch.tv/videos/1778374666 -->
+        <iframe
+            src="https://player.twitch.tv/?video=v1778374666&parent=cchana.github.io&autoplay=false"
+            class="embedded-video"
+            allowfullscreen>
+        </iframe>
 
-        <ol reversed>
-            <li>Ut vestibulum, enim at pellentesque dapibus</li>
-            <li>Morbi gravida lobortis felis, eu faucibus mi condimentum</li>
-            <li>Aliquam orci eros, interdum in laoreet ac, euismod molestie eros</li>
-        </ol>
+        <p>SkeletonCSS relies on system fonts, reducing the payload and footprint of your website.</p>
 
-        <h5 id="heading-7">Pellentesque dignissim sem ligula, ut ultrices arcu auctor ac <a href="#heading-7" title="Link to this heading">🔗</a></h5>
+        <h3 id="typography-variables">Variables in typography <a href="#typography-variables" title="Link to this heading">🔗</a></h3>
 
-        <p>Fusce in euismod enim. Etiam rhoncus sollicitudin interdum. Pellentesque dapibus ipsum sed aliquam imperdiet. Suspendisse potenti. Maecenas pellentesque ex ut dui pharetra, nec ultrices est porta. Mauris accumsan maximus mi, sed bibendum nunc consectetur sed. In in viverra erat, at porta lorem. In hac habitasse platea dictumst. Nullam non lectus aliquam, pulvinar velit sed, condimentum velit. Nam eu mauris vel libero fermentum ornare eget at ex. Etiam egestas maximus turpis, egestas commodo purus finibus vitae. Donec finibus dignissim lacus, et facilisis urna tincidunt eget. Donec laoreet eros mi, euismod volutpat enim efficitur eu. Aenean aliquet mauris nulla, at facilisis est dictum et. Praesent lobortis ligula sed pulvinar hendrerit.</p>
+        <p>SkeletonCSS exposes 8 CSS variables for you to use. Headings, paragraphs and lists take advantage of them out of the box. You can change the values to suite your needs.</p>
 
-        <h6 id="heading-8">Pellentesque gravida vulputate ipsum vel pharetra <a href="#heading-8" title="Link to this heading">🔗</a></h6>
+        <pre><code>--font-size-xxxxl: 4rem;
+--font-size-xxxl: 2.9rem;
+--font-size-xxl: 2rem;
+--font-size-xl: 1.6rem;
+--font-size-lg: 1.2rem;
+--font-size-md: 1rem;
+--font-size-sm: .8rem;
+--font-size-xs: .5rem;</code></pre>
 
-        <p>Nunc condimentum, nisi sed vehicula faucibus, libero sem placerat felis, et molestie mi leo nec quam. Sed tellus felis, lobortis a rhoncus vitae, mollis ut dui. Sed ac turpis tellus. Cras a nulla varius, tincidunt risus vitae, euismod felis. Morbi malesuada placerat urna vitae scelerisque. Ut volutpat cursus interdum. Curabitur dictum elit vitae nunc ultrices, eu dictum massa hendrerit. Nam lacinia purus nec consequat volutpat. Curabitur bibendum ligula nunc, sit amet interdum sapien iaculis nec. Nam pharetra, felis ac vestibulum placerat, felis ante bibendum est, sollicitudin elementum tortor diam quis nisl. Praesent nulla nibh, condimentum vitae congue et, elementum nec erat.</p>
+        <p>The naming convention is similar to other projects, like Bootstrap, and give you sizes all the way from <abbr title="eXtra Small">XS</abbr> up to <abbr title="eXtra eXtra eXtra Large">XXXL</abbr>.</p>
+
+        <h2 id="using">Using SkeletonCSS? <a href="#using" title="Link to this heading">🔗</a></h2>
+
+        <p>If you make use of SkeletonCSS, please let the <a href="https://twitter.com/cchana">author</a> know.</p>
 
     </main>
 
     <footer>
 
-        <p>&copy; Nam lacinia purus nec consequat volutpat.</p>
+        <p>SkeletonCSS is a project by <a href="https://charanj.it">Charanjit Chana</a>, started in <a href="https://www.1thingaweek.com/archive/tag/skeletoncss">2021</a>.</p>
 
     </footer>
 
