Fixed wrong colour ref in abbr tags and added fonts heading

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=895186C2CE59BF66A3A4A7D10D0A75E9" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=8F60EC58B60C6E7CC228856A1A310E65" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=6C3DFB645865DF5A2F53C31B424ADAC0" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=7E01986EAB64094369160EBE5E9802A8" />
 </head>
 <body>
 
@@ -52,6 +52,8 @@
             class="embedded-video"
             allowfullscreen>
         </iframe>
+
+        <h3 id="typography-fonts">Fonts <a href="#typography-fonts" title="Link to this heading">🔗</a></h3>
 
         <p>SkeletonCSS relies on system fonts, reducing the payload and footprint of your website.</p>
 
