Code blocks now shrink to fit content

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=6C3DFB645865DF5A2F53C31B424ADAC0" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=7E01986EAB64094369160EBE5E9802A8" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=7799E33CEA91A505C703E465730E81E3" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=9FCC04BED11F1CA6824133FC9E3DB12D" />
 </head>
 <body>
 
@@ -61,7 +61,7 @@
 
         <p>SkeletonCSS exposes 8 CSS variables for you to use. Headings, paragraphs and lists take advantage of them out of the box. You can change the values to suite your needs.</p>
 
-        <pre><code>--font-size-xxxxl: 4rem;
+        <pre><code>--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;--font-size-xxxxl: 4rem;
 --font-size-xxxl: 2.9rem;
 --font-size-xxl: 2rem;
 --font-size-xl: 1.6rem;
