--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=ADF8A9C71AAA56037499B2B700594F73" />
-    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=9FCC04BED11F1CA6824133FC9E3DB12D" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=9C3FB784AA5D81F132B5CCD5E2CEA699" />
+    <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=3012AEA7650D6D983F0707DEE6CE87B8" />
 </head>
 <body>
 
@@ -26,21 +26,21 @@
 
     <main>
 
-        <h2 id="intro">This is an example page built with SkeletonCSS <a href="#intro" title="Link to this heading">🔗</a></h2>
+        <h2 id="intro">This is an example page built with SkeletonCSS</h2>
 
         <p>Throughout my career, I've largely avoided reset files and worked with the quirks of CSS and rendering engines in mind. SkeletonCSS is a different take on a CSS library where you just get a base to work from.</p>
 
         <p>Built with <a href="https://sass-lang.com/">SASS</a>, the project ships with some basic mixins and themeing functionality:</p>
 
         <ul>
-            <li>Media queries</li>
+            <li><a href="#typography">Basic typography</a></li>
+            <li><a href="#media-queries">Media queries</a></li>
             <li>Responsive layouts</li>
             <li>Colour palettes</li>
             <li>Fibonacci based sizing</li>
-            <li><a href="#typography">Basic typography</a></li>
         </ul>
 
-        <h3 id="typography">Typography <a href="#typography" title="Link to this heading">🔗</a></h2>
+        <h3 id="typography">Typography</h2>
 
         <p>One of the reasons for SkeletonCSS to exist was to provide a layer of typography that could just be plugged into any site. Over time it's evolved and become a little more harmonious.</p>
 
@@ -53,11 +53,11 @@
             allowfullscreen>
         </iframe>
 
-        <h3 id="typography-fonts">Fonts <a href="#typography-fonts" title="Link to this heading">🔗</a></h3>
+        <h3 id="typography-fonts">Fonts</h3>
 
         <p>SkeletonCSS relies on system fonts, reducing the payload and footprint of your website.</p>
 
-        <h3 id="typography-variables">Variables in typography <a href="#typography-variables" title="Link to this heading">🔗</a></h3>
+        <h3 id="typography-variables">Variables in typography</h3>
 
         <p>SkeletonCSS exposes 8 CSS variables for you to use. Headings, paragraphs and lists take advantage of them out of the box. You can change the values to suite your needs.</p>
 
@@ -72,7 +72,44 @@
 
         <p>The naming convention is similar to other projects, like Bootstrap, and give you sizes all the way from <abbr title="eXtra Small">XS</abbr> up to <abbr title="eXtra eXtra eXtra Large">XXXL</abbr>.</p>
 
-        <h2 id="using">Using SkeletonCSS? <a href="#using" title="Link to this heading">🔗</a></h2>
+        <h2 id="media-queries">Media Queries</h2>
+
+        <p>If you're using SASS you can still write out your own media queries, but you can also generate them using the <code>mq()</code> mixin.</p>
+
+        <pre><code>@include mq(<i>width (px) (, orientation (0 | portrait | landscape), min-max (min | max))</i>) {
+    // CSS here
+}</code></pre>
+
+        <p>Keep it simple by supplying just the first parameter and your media query will take a mobile-first approach and treat it as a <code>min-width</code> property. You can introduce the orientation or choose to switch to a <code>max-width</code> instead. The following example shows how to define a <code>min-width</code> of <code>700px</code>.</p>
+
+        <pre><code>@include mq(700px)) {
+    // CSS here
+}</code></pre>
+
+        <p>The following example switches from <code>min-width</code> to <code>max-width</code>, but continues to ignore the device's orientation.</p>
+
+        <pre><code>@include mq(700px, 0, max)) {
+    // CSS here
+}</code></pre>
+
+        <p>To introduce orientation as a paramater, just specifiy using the second parameter.</p>
+
+        <pre><code>@include mq(700px, portrait)) {
+    // CSS here
+}</code></pre>
+
+        <p>For more complex situations, it's recommended you write your own media queries. This mixin exists to reduce the footprint of the SASS file and it's use is completely optional.</p>
+
+        <p>SASS allows you to nest media queries in your existing code, so you are also able to write code in the following format:</p>
+
+        <pre><code>p {
+    margin-block-end: 2rem;
+    @include mq(700px) {
+        margin-block-end: 4rem;
+    }
+}</code></pre>
+
+        <h2 id="using">Using SkeletonCSS?</h2>
 
         <p>If you make use of SkeletonCSS, please let the <a href="https://twitter.com/cchana">author</a> know.</p>
 
@@ -81,6 +118,11 @@
     <footer>
 
         <p>SkeletonCSS is a project by <a href="https://charanj.it">Charanjit Chana</a>, started in <a href="https://www.1thingaweek.com/archive/tag/skeletoncss">2021</a>.</p>
+
+        <pre class="skeleton-logo" title="SkeletonCSS"> .-.
+(o.o)
+ |=|
+ CSS</pre>
 
     </footer>
 
