footer is now a solid colour, introducing hr styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SkeletonCSS example page</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=AD55AAC7D0A89BB6B3AFE301826A2CFB" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?ckcachebust=A39809D68E040CCC20C9399313DC363C" />
     <link type="text/css" rel="stylesheet" href="css/theme-default.css?ckcachebust=3012AEA7650D6D983F0707DEE6CE87B8" />
 </head>
 <body>
@@ -140,6 +140,10 @@
         <h2 id="using">Using SkeletonCSS?</h2>
 
         <p>If you make use of SkeletonCSS, please let the <a href="https://twitter.com/cchana">author</a> know.</p>
+
+        <hr>
+
+        <p>Alternatively, you can reach out on <a href="https://bsky.app/profile/cchana.dev">Bluesky</a>.</p>
 
     </main>
 
